# machine-learning

./: .gitignore  README.md  pyproject.toml
HW1/: HW1.ipynb
HW2/: HW2.ipynb
HW3/: HW3.ipynb
HW4/: HW4.ipynb
HW5/: hw5.ipynb
