[project]
name = ""
version = ""
description = ""
authors = [
    {name = "BaBa0525", email = "hsunhsun0525@gmail.com"},
]
dependencies = [
    "numpy>=1.23.4",
    "matplotlib>=3.6.1",
    "pandas>=1.5.1",
    "ipykernel>=6.16.2",
    "scikit-learn>=1.1.3",
    "alive-progress>=2.4.1",
    "tqdm>=4.64.1",
    "ipywidgets>=8.0.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
